--- a/css/device.css
+++ b/css/device.css
@@ -2,7 +2,7 @@
     width: 160px;
     height: 160px;
     position: relative;
-    background-color: "Red";
+    background-color: red;
 }
 
 .dpad {
