--- a/css/device.css
+++ b/css/device.css
@@ -11,7 +11,7 @@
     left: 0;
     width: 320px;
     height: 288px;
-    background-color: #fff;
+    background-color: #aaa;
     background-size: 320px 288px;
 }
 
