--- a/css/device.css
+++ b/css/device.css
@@ -1,18 +1,18 @@
 #display {
     position: relative;
     margin: auto;
-    width: 320px;
-    height: 288px;
+    width: 640px;
+    height: 480px;
+    border-style: ridge;
+    border-width: 8px;
 }
 
 .display {
     position: absolute;
     top: 0;
     left: 0;
-    width: 320px;
-    height: 288px;
-    background-color: #aaa;
-    background-size: 320px 288px;
+    width: 100%;
+    height: 100%;
 }
 
 .dpad-touch-target {
